--- a/equalDevSite/data/fr/clients.yml
+++ b/equalDevSite/data/fr/clients.yml
@@ -1,21 +1,22 @@
 enable    : true
-title     : FRANCAIS We care about our work
+title     : Stages of web design
 description: >
-  FRANCAIS Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorem, saepe ab, optio obcaecati id asperiores. Ab ullam qui architecto at eos distinctio debitis, libero reprehenderit excepturi rem ut odit est nam magni ratione necessitatibus, quod eaque, eius minima tempora deleniti illum aliquam! Perferendis optio dolorum blanditiis sapiente aperiam quaerat.
+  We make a general analysis of the project, measuring its scope and objectives. We carry out a professional, high-impact, attractive and attractive design adapted to the client's needs. We do the coding under the standards and norms of the W3C. The need to acquire an online marketing service is contemplated.
 image     : images/about/about-1.jpg
 servicelist:
-  - name    : Creative Designers
-  - name    : Genius Developers
-  - name    : Growth Hackers
-  - name    : Marketing Masterminds
+  - name    : Research
+  - name    : UX/UI design
+  - name    : Develop
+  - name    : Optimization
 clientLogo:
-  - image   : images/client-logo/logo1.png
+  - image   : images/client-logo/logo-1.png
   - image   : images/client-logo/logo-2.png
   - image   : images/client-logo/logo-3.png
   - image   : images/client-logo/logo-4.png
   - image   : images/client-logo/logo-5.png
-  - image   : images/client-logo/logo1.png
-  - image   : images/client-logo/logo-2.png
-  - image   : images/client-logo/logo-3.png
-  - image   : images/client-logo/logo-4.png
-  - image   : images/client-logo/logo-5.png
+  - image   : images/client-logo/logo-6.png
+  - image   : images/client-logo/logo-7.png
+  - image   : images/client-logo/logo-8.png
+  - image   : images/client-logo/logo-9.png
+  - image   : images/client-logo/logo-10.png
+  - image   : images/client-logo/logo-11.png
