--- a/equalDevSite/data/fr/team.yml
+++ b/equalDevSite/data/fr/team.yml
@@ -1,45 +1,21 @@
 enable  : true
-topTitle: FRANCAIS TEAM MEMBER
-title   : FRANCAIS Our Team.
-subtitle: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis quasi itaque, obcaecati atque sit!
-
+topTitle: Experience
+title   : +5 Years of Web Design for all Argentina
+subtitle: Responsive web design, optimized for search engines, focus on results
 member  :
   - image         : images/team/member-1.jpg
-    name          : FRANCAIS Shawshank Redemption
-    designation   : Head Of Marketing
+    name          : Responsive web design
     description   : >
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
-    facebookURL   : https://www.facebook.com/
-    twitterURL    : https://twitter.com/
-    gplusURL      : https://plus.google.com/
-    dribbbleURL   : https://dribbble.com/
+      Your website will work and look great, not only on pc monitors, but also on mobile devices such as cell phones and tablets. This will help to considerably increase its audience and therefore its results.
+
 
   - image         : images/team/member-2.jpg
-    name          : Leo Departure
-    designation   : Web Developer
+    name          : Optimized for Search Engines
     description   : >
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
-    facebookURL   : https://www.facebook.com/
-    twitterURL    : https://twitter.com/
-    gplusURL      : https://plus.google.com/
-    dribbbleURL   : https://dribbble.com/
+      We approach programming our designs so that they look good to both people and search engines like Google. This contributes substantially to your page getting better positions in the search results.
+
 
   - image         : images/team/member-3.jpg
-    name          : Remoni Rio
-    designation   : Senior Developer
+    name          : Focus on Results
     description   : >
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
-    facebookURL   : https://www.facebook.com/
-    twitterURL    : https://twitter.com/
-    gplusURL      : https://plus.google.com/
-    dribbbleURL   : https://dribbble.com/
-
-  - image         : images/team/member-4.jpg
-    name          : Lawandeski Roma
-    designation   : Designer
-    description   : >
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
-    facebookURL   : https://www.facebook.com/
-    twitterURL    : https://twitter.com/
-    gplusURL      : https://plus.google.com/
-    dribbbleURL   : https://dribbble.com/
+      Obtaining commercial results through your website is the main objective of a correct online strategy. For this reason, we carry out our web design process with a special focus on marketing and user experience aspects.
