--- a/equalDevSite/config.toml
+++ b/equalDevSite/config.toml
@@ -33,72 +33,72 @@ description = "Diseño y desarrollo de páginas web"
 
 # Gestion des langues : FR / EN / NL / DE
 [Languages]
-############ 1 - Site en FRANCAIS
+############ 1 - Sitio en Inglés
 [Languages.fr]
 weight = 1
 languageCode = "fr-fr"
-title = "FRANCAIS Example site multi-language"
+title = "Web Develop | EqualDev "
 dateFormat = "2 January 2006"
 
 home = "FR Home"
 logo = "images/logo.svg"
 menufixed = false
 
-footerDescription = "FRANCAIS Integer posuere erat a ante venenati dapibus posuere velit aliquet. Fusce dapibus, tellus cursus commodo, tortor mauris sed posuere."
-footerServiceTitle = "FRANCAIS Services"
-footerQuicklinkTitle = "FRANCAIS Quick links"
-footerAboutTitle = "FRANCAIS About"
-footerSubscribeTitle = "FRANCAIS Subscribe"
+footerDescription = "Group of Professionals mainly oriented to web design and with extensive experience in what we do."
+footerServiceTitle = "Services"
+footerQuicklinkTitle = "Quick Access"
+footerAboutTitle = "EqualDev"
+footerSubscribeTitle = "Subscribe"
 
 # Hero Area Section
 [Languages.fr.params.hero]
 enable  = true
-heading = "FRANCAIS We love to make brands grow"
-description = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. At quo dolor est incidunt suscipit minima, alias numquam voluptatum rerum porro. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore at laboriosam unde repellat id expedita quae quisquam libero officia consequatur."
+heading = "Diseño Web Profesional y Desarrollo Web Empresarial"
+description = "We are a design and digital marketing agency based in Buenos Aires ... We develop and implement solutions with real results on digital platforms that allow companies to exploit their full potential on the web"
 button  = true
-btnText = "Know More"
-btnURL  = "https://themefisher.com/"
-videoThumb = "images/slider/video-player-thumb.jpg"
-videoURL   = "https://www.youtube.com/embed/g3-VxLQO7do"
+btnText = "I want to design my website"
+btnURL  = "/fr/contact"
+videoThumb = "images/slider/video-player-thumb3.jpg"
+videoURL   = "https://streamable.com/19i7af"
 
 # About 2 Section
 [Languages.fr.params.aboutSm]
 enable  = true
-title   = "FRANCAIS We have explored the digital landscape with passion for a long time"
-description = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae deleniti ipsa labore necessitatibus culpa veritatis quo accusantium, neque enim ea ad eaque iure, quas tempore velit, quibusdam dolor illo! Explicabo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid quisquam maiores iste soluta, nihil dolorem?"
+title   = "We have been passionately exploring the digital landscape for a long time."
+description = " We are a group of professionals mainly oriented to web design and with extensive experience in what we do. With us you can develop your institutional website, create your online store and sell your products, publish your digital newspaper, create your blog, develop a catalog offering your products or services, we also generate landing pages focused mainly on search engine visibility to work directly on them. with advertising in Google Adwords."
 
 # Blog Section On Homepage
 [Languages.fr.params.blog]
 enable  = true
-topTitle= "OUR UNTOLD STORY"
-title   = "FRANCAIS Blog."
-subtitle= "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis quasi itaque, obcaecati atque sit!"
+topTitle= "News from the digital worldl"
+title   = "Blog"
+subtitle= "We publish in this blog about web design, positioning, advertising, content marketing and more."
 
 # Contact Section
 [Languages.fr.params.contact]
 enable  = true
-topTitle= "DROP US A NOTE"
-title   = "FRANCAIS Contact Us."
-subtitle= "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis quasi itaque, obcaecati atque sit!"
-address = "14/05, Stockhome <br> Victori Palace , United States"
-phone   = "(03) 9283 2617"
-fax     = "+61 3827 3590"
+topTitle= "Contact"
+title   = "Hire our services"
+subtitle= "Complete the form with your data and leave us your query. An advisor will contact you shortly to design your website. Specify all the requirements of your website and if you have reference websites, detail them in your message."
+address = "Av. Rivadavia 8000 <br> Floresta , Argentina"
+phone   = "(11) 4982 9215"
+fax     = "+54 9 11 3112 7022"
 facebook= "https://www.facebook.com/"
 twitter = "https://twitter.com/"
 linkedin= "https://www.linkedin.com/"
 dribbble= "https://dribbble.com/"
 instagram= "https://www.instagram.com/"
-mapLatitude = "51.507351"
-mapLongitude= "-0.127758"
+mapLatitude = "-34.63262983538989"
+mapLongitude= "-58.476557175585064"
 mapMarker   = "images/marker.png"
 
 # Call to Action Section on About Page
 [Languages.fr.params.cta]
 enable  = true
 bg      = "images/call-to-action/call-to-action-bg-2.jpg"
-title   = "FRANCAIS Let's Create Something Together"
-subtitle= "Proin gravida nibh vel velit auctor aliquet. Aenean sollicudin bibendum auctor, <br> nisi elit consequat ipsum, nesagittis sem nid elit. Duis sed odio sitain elit."
-btnText = "Nous contacter"
+title   = "Together we can create something amazing"
+subtitle= "We are an experienced company with specialized professionals, <br> in the design of web solutions"
+btnText = "Contact me"
 
 ############# 2 - Site en ENGLISH
 [Languages.en]
