--- a/equalDevSite/config.toml
+++ b/equalDevSite/config.toml
@@ -126,7 +126,7 @@ expire_days = 2
 [Languages.en.params.hero]
 enable  = true
 heading = "Diseño Web Profesional y Desarrollo Web Empresarial"
-description = "Somos una agencia de diseño y marketing digital con sede en Buenos Aires...Desarrollamos e implementamos soluciones con resultados reales sobre plataformas digitales permitiendo a las empresas explotar todo su potencial en la web"
+description = "Somos una agencia de diseño y desarrollo web con sede en Buenos Aires,desarrollamos e implementamos soluciones con resultados reales sobre plataformas digitales permitiendo a las empresas explotar todo su potencial en la web"
 button  = true
 btnText = "Quiero diseñar mi página web"
 btnURL  = "/en/contact"
