changes in texts

--- a/equalDevSite/config.toml
+++ b/equalDevSite/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://equaldev.netlify.app/"
+baseURL = "https://www.equaldev.com"
 languageCode = "es-us"
 title = "Diseño de páginas web | EqualDev "
 theme = "equalDevSite"
@@ -40,7 +40,7 @@ languageCode = "fr-fr"
 title = "Web Develop | EqualDev "
 dateFormat = "2 January 2006"
 
-home = "FR Home"
+home = "Home"
 logo = "images/logo.svg"
 menufixed = false
 
@@ -87,7 +87,7 @@ facebook= "https://www.facebook.com/"
 twitter = "https://twitter.com/"
 linkedin= "https://www.linkedin.com/"
 dribbble= "https://dribbble.com/"
-instagram= "https://www.instagram.com/"
+instagram= "https://www.instagram.com/equal.dev"
 mapLatitude = "-34.63262983538989"
 mapLongitude= "-58.476557175585064"
 mapMarker   = "images/marker.png"
@@ -159,7 +159,7 @@ facebook= "https://www.facebook.com/"
 twitter = "https://twitter.com/"
 linkedin= "https://www.linkedin.com/"
 dribbble= "https://dribbble.com/"
-instagram= "https://www.instagram.com/"
+instagram= "https://www.instagram.com/equal.dev"
 mapLatitude = "-34.63262983538989"
 mapLongitude= "-58.476557175585064"
 mapMarker   = "images/marker.png"
